[gd_scene load_steps=16 format=2]

[ext_resource path="res://Resources/font/BMYEONSUNG_ttf.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Screen/Skills/SkillInspector/SkillInspector.gd" type="Script" id=2]
[ext_resource path="res://Resources/skill_icons/Icon1.png" type="Texture" id=3]
[ext_resource path="res://Resources/gui_images/Division line.png" type="Texture" id=4]
[ext_resource path="res://Resources/socket.png" type="Texture" id=5]
[ext_resource path="res://Resources/gui_images/DivisionLineVertical.png" type="Texture" id=6]
[ext_resource path="res://UI/SkillsScreen/SkillInspector/skill_stat_label.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/skill_borders/Border3.png" type="Texture" id=8]
[ext_resource path="res://Resources/gui_images/UI board Large  parchment.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.317647, 0.317647, 0.317647, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 1 )

[node name="SkillInspector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BackgroundDimm" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.690196 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="BackgroundDimm"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 200.0
margin_right = -99.9999
margin_bottom = -340.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.023
anchor_right = 0.977
anchor_bottom = 1.0
margin_left = -0.240004
margin_top = 20.0
margin_right = 0.239868
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panel/VBoxContainer"]
margin_right = 840.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 2 )
text = "Skill Name"
align = 1
valign = 1

[node name="Line1" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 104.0
margin_right = 840.0
margin_bottom = 119.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line1"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line1"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line1"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Tags" type="Label" parent="Panel/VBoxContainer"]
margin_top = 123.0
margin_right = 840.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 3 )
text = "Tag1 - Tag2"
align = 1
valign = 1

[node name="Line2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 175.0
margin_right = 840.0
margin_bottom = 190.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line2"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line2"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line2"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Image" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 194.0
margin_right = 840.0
margin_bottom = 594.0
rect_min_size = Vector2( 0, 400 )

[node name="Border" type="TextureRect" parent="Panel/VBoxContainer/Image"]
margin_right = 840.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Icon" type="TextureRect" parent="Panel/VBoxContainer/Image/Border"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line3" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 598.0
margin_right = 840.0
margin_bottom = 613.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line3"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line3"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line3"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Implicit" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 617.0
margin_right = 840.0
margin_bottom = 665.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Implicit"]
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Level" type="Label" parent="Panel/VBoxContainer/Implicit"]
margin_left = 104.0
margin_right = 408.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Level 1"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Implicit"]
margin_left = 412.0
margin_right = 427.0
margin_bottom = 48.0
rect_min_size = Vector2( 15, 0 )
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true

[node name="Cooldown" type="Label" parent="Panel/VBoxContainer/Implicit"]
margin_left = 431.0
margin_right = 736.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Cooldown : 5s"
align = 1
valign = 1

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Implicit"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Line4" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 669.0
margin_right = 840.0
margin_bottom = 684.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line4"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line4"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line4"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Stats" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 688.0
margin_right = 840.0
margin_bottom = 940.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Stats"]
margin_right = 100.0
margin_bottom = 252.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Description" type="VBoxContainer" parent="Panel/VBoxContainer/Stats"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Description" type="Label" parent="Panel/VBoxContainer/Stats/Description"]
margin_right = 632.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
text = "A basic strike that deals physical damage."
align = 1
valign = 1
autowrap = true

[node name="Line7" type="HBoxContainer" parent="Panel/VBoxContainer/Stats/Description"]
margin_top = 40.0
margin_right = 632.0
margin_bottom = 55.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Stats/Description/Line7"]
margin_right = 150.0
margin_bottom = 15.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Stats/Description/Line7"]
margin_left = 154.0
margin_right = 478.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Stats/Description/Line7"]
margin_left = 482.0
margin_right = 632.0
margin_bottom = 15.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/Stats/Description"]
margin_top = 59.0
margin_right = 632.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Stats/Description/ScrollContainer"]
margin_right = 632.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SkillStatLabel" parent="Panel/VBoxContainer/Stats/Description/ScrollContainer/VBoxContainer" instance=ExtResource( 7 )]

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Stats"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 252.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Margin1" type="Label" parent="Panel/VBoxContainer"]
margin_top = 944.0
margin_right = 840.0
margin_bottom = 958.0

[node name="Line5" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 962.0
margin_right = 840.0
margin_bottom = 977.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line5"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line5"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line5"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Margin2" type="Label" parent="Panel/VBoxContainer"]
margin_top = 981.0
margin_right = 840.0
margin_bottom = 995.0

[node name="Sockets" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 999.0
margin_right = 840.0
margin_bottom = 1139.0
rect_min_size = Vector2( 0, 140 )

[node name="Margin1" type="Label" parent="Panel/VBoxContainer/Sockets"]
margin_right = 100.0
margin_bottom = 140.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect1" type="TextureRect" parent="Panel/VBoxContainer/Sockets"]
margin_left = 104.0
margin_right = 242.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 5 )
expand = true

[node name="Margin2" type="Label" parent="Panel/VBoxContainer/Sockets"]
margin_left = 246.0
margin_right = 346.0
margin_bottom = 140.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="Panel/VBoxContainer/Sockets"]
margin_left = 350.0
margin_right = 489.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 5 )
expand = true

[node name="Margin3" type="Label" parent="Panel/VBoxContainer/Sockets"]
margin_left = 493.0
margin_right = 593.0
margin_bottom = 140.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect3" type="TextureRect" parent="Panel/VBoxContainer/Sockets"]
margin_left = 597.0
margin_right = 736.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 5 )
expand = true

[node name="Margin4" type="Label" parent="Panel/VBoxContainer/Sockets"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 140.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Margin3" type="Label" parent="Panel/VBoxContainer"]
margin_top = 1143.0
margin_right = 840.0
margin_bottom = 1157.0

[node name="Line6" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 1161.0
margin_right = 840.0
margin_bottom = 1176.0

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/Line6"]
margin_right = 100.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Line6"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/Line6"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 15.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 1180.0
margin_right = 840.0
margin_bottom = 1330.0
rect_min_size = Vector2( 0, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMargin" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[node name="Equip" type="TextureButton" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 736.0
margin_bottom = 150.0
size_flags_horizontal = 3
texture_normal = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer/Equip"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "EQUIP SKILL"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMargin" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 150.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 3

[connection signal="pressed" from="BackgroundDimm/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/Equip" to="." method="_on_Equip_pressed"]
